# parallel-conduits

./: .gitignore  README.md  TODO  parallel-conduits.cabal
docs/: 00README.txt  temp.dia.autosave
draw/: Arrow.hs  Circuit.hs  Fuse.hs  MainBox.hs  Misc.hs  Rect.hs  Render.hs  Route.hs  Simple.hs  Tee.hs  Types.hs  draw.hs
src/Data/Conduit/: Parallel.hs
src/Data/Conduit/Parallel/Internal/: AUtils.hs  Arrow.hs  Cache.hs  Circuit.hs  Control.hs  Copier.hs  Duct.hs  Flip.hs  Fuse.hs  LiftC.hs  ParDuct.hs  Parallel.hs  ParallelA.hs  Run.hs  Spawn.hs  Tee.hs  Type.hs  Utils.hs  Worker.hs
test/: DuctInfra.hs  DuctTest.hs  Main.hs
