name:                parallel-conduits
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bhurt/parallel-conduits#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           BSD
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
extra-doc-files:     docs/fuse.svg
                        , docs/fixP.svg
                        , docs/fuseLeft.svg
                        , docs/fuseMap.svg
                        , docs/fuseSemigroup.svg
                        , docs/fuseTuple.svg
                        , docs/merge.svg
                        , docs/parallel.svg
                        , docs/proFunctor.svg
                        , docs/routeEither.svg
                        , docs/routeThese.svg
                        , docs/routeTuple.svg
                        , docs/simple.svg
                        , docs/tee.svg

Flag Devel
    Description:       Development build (enable warnings and less optimization)
    Default:           False

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Parallel
                        , Data.Conduit.Parallel.Internal.AUtils
                        , Data.Conduit.Parallel.Internal.Arrow
                        , Data.Conduit.Parallel.Internal.Cache
                        , Data.Conduit.Parallel.Internal.Circuit
                        , Data.Conduit.Parallel.Internal.Copier
                        , Data.Conduit.Parallel.Internal.Duct
                        , Data.Conduit.Parallel.Internal.Fuse
                        , Data.Conduit.Parallel.Internal.LiftC
                        , Data.Conduit.Parallel.Internal.Parallel
                        , Data.Conduit.Parallel.Internal.Run
                        , Data.Conduit.Parallel.Internal.Spawn
                        , Data.Conduit.Parallel.Internal.Tee
                        , Data.Conduit.Parallel.Internal.Type
  build-depends:       base >= 4.7 && < 5
                        , conduit
                        , containers
                        , deepseq
                        , mtl
                        , profunctors
                        , stm
                        , these
                        , transformers
                        , unliftio
                        , unliftio-core
                        -- , lifted-base
                        -- , monad-control
                        -- , selective
                        -- , transformers
                        -- , witherable
  default-language:    Haskell2010
  if flag(devel)
    ghc-options:       -O0
                        -W
                        -Weverything
                        -Wno-implicit-prelude
                        -Wno-missing-deriving-strategies
                        -Wno-missing-export-lists
                        -Wno-missing-import-lists
                        -Wno-missing-safe-haskell-mode
                        -Wno-prepositive-qualified-module
                        -Wno-safe
                        -Wno-unsafe
                        -Werror 
  else
    ghc-options:       -O2


test-suite parallel-haskell-testsuite
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    other-modules:      DuctTest
                        , DuctInfra
    hs-source-dirs:     test
    build-depends:      base >= 4.7 && < 5
                        , async
                        , HUnit
                        , lifted-base
                        , mtl
                        , parallel-conduits
                        -- , conduit
                        -- , deepseq
                        -- , profunctors
                        -- , random
                        -- , these
                        -- , witherable
    default-language:   Haskell2010
    if flag(devel)
      ghc-options:       -O0
                          -W
                          -Weverything
                          -Wno-implicit-prelude
                          -Wno-missing-deriving-strategies
                          -Wno-missing-export-lists
                          -Wno-missing-import-lists
                          -Wno-missing-safe-haskell-mode
                          -Wno-prepositive-qualified-module
                          -Wno-safe
                          -Wno-unsafe
                          -Werror 
                          -static
                          -threaded
                          -rtsopts
                          -with-rtsopts=-N
                          -with-rtsopts=-T
    else
      ghc-options:       -O0
                          -static
                          -threaded
                          -rtsopts
                          -with-rtsopts=-N
                          -with-rtsopts=-T


source-repository head
  type:     git
  location: https://github.com/bhurt/parallel-conduits
